--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ certifi==2019.11.28
 chardet==3.0.4
 cycler==0.10.0
 cymem==2.0.3
+declutter==1
+Deprecated==1.2.7
 idna==2.9
 joblib==0.14.1
 kiwisolver==1.1.0
@@ -12,7 +14,9 @@ murmurhash==1.0.2
 numpy==1.18.1
 pandas==1.0.1
 plac==1.1.3
+ply==3.11
 preshed==3.0.2
+PyJWT==1.7.1
 pyparsing==2.4.6
 python-dateutil==2.8.1
 pytz==2019.3
@@ -28,3 +32,4 @@ thinc==7.3.1
 tqdm==4.43.0
 urllib3==1.25.8
 wasabi==0.6.0
+wrapt==1.12.0
